appId: ${APP_ID}
---
- runFlow: ../subflows/navigation/navigate-to-transactions.flow.yaml

- extendedWaitUntil:
      visible:
          id: '^TransactionCard[.]Label[.].+$'
      timeout: 15000

- runFlow:
      file: ../subflows/transactions/long-press-convert-to-transfer.flow.yaml
      env:
          TRANSACTION_CARD_ID: '^TransactionCard[.]Label[.].+$'

- tapOn:
      id: 'TransferForm.ToAccount'

- extendedWaitUntil:
      visible:
          id: 'AccountPickerBottomSheet.Input'
      timeout: 10000

- waitForAnimationToEnd

- takeScreenshot: scene
