appId: ${APP_ID}
---
- runFlow: ../subflows/accounts/open-new-account.flow.yaml

- scrollUntilVisible:
      element:
          id: 'CreateAccount.ERSTE'
      direction: DOWN
      timeout: 10000
      visibilityPercentage: 80
      centerElement: false
      speed: 20

- scroll

- waitForAnimationToEnd

- tapOn:
      id: 'CreateAccount.ERSTE'

- extendedWaitUntil:
      visible:
          id: 'CreateFileBankAccount.SelectFileButton'
      timeout: 10000

- tapOn:
      id: 'CreateFileBankAccount.SelectFileButton'
      retryTapIfNoChange: true

- runFlow:
      file: ../subflows/import/select-file-from-app-provider.flow.yaml
      env:
          FILE_ROW_ID_MATCH: 'erste-statement-008, pdf'

- extendedWaitUntil:
      visible:
          id: 'SyncAccountSelection.Row.Erste_EUR'
      timeout: 5000

- waitForAnimationToEnd

- takeScreenshot: scene
