appId: ${APP_ID}
env:
    BANK_INTEGRATION_ID: ${BANK_INTEGRATION_ID || '1'}
    BANK_ACCOUNT_ROW_ID: ${BANK_ACCOUNT_ROW_ID || '12'}
---
- runFlow:
      file: ../subflows/navigation/open-deep-link.flow.yaml
      env:
          DEEP_LINK: 'budgie://'

- extendedWaitUntil:
      visible:
          id: 'HomePage.TotalBalance'
      timeout: 15000

- scrollUntilVisible:
      element:
          id: 'BankProviderSectionHeader.SettingsButton.${BANK_INTEGRATION_ID}'
      direction: DOWN
      centerElement: true
      waitToSettleTimeoutMs: 1000
- waitForAnimationToEnd

- takeScreenshot: poster

- startRecording: clip

- tapOn:
      id: 'BankProviderSectionHeader.SettingsButton.${BANK_INTEGRATION_ID}'

- extendedWaitUntil:
      visible:
          id: 'BankIntegration.Page'
      timeout: 15000

- swipe:
      direction: DOWN

- extendedWaitUntil:
      visible:
          id: 'BankIntegration.AccountRow.${BANK_ACCOUNT_ROW_ID}'
      timeout: 30000

- waitForAnimationToEnd

- stopRecording
