appId: ${APP_ID}
---
- runFlow:
      file: ../subflows/navigation/open-deep-link.flow.yaml
      env:
          DEEP_LINK: 'budgie://'

- extendedWaitUntil:
      visible:
          id: 'HomePage.TotalBalance'
      timeout: 15000

- runFlow: ../subflows/accounts/open-new-account.flow.yaml

- scrollUntilVisible:
      element:
          id: 'CreateAccount.PRIVATBANK'
      direction: DOWN
      timeout: 10000
      centerElement: false
      speed: 20

- scroll

- waitForAnimationToEnd

- tapOn:
      id: 'CreateAccount.PRIVATBANK'

- extendedWaitUntil:
      visible:
          id: 'CreateFileBankAccount.SelectFileButton'
      timeout: 10000

- tapOn:
      id: 'CreateFileBankAccount.SelectFileButton'
      retryTapIfNoChange: true

- runFlow:
      file: ../subflows/import/select-file-from-app-provider.flow.yaml
      env:
          FILE_ROW_ID_MATCH: 'privatbank-statement-001, xlsx'

- extendedWaitUntil:
      visible:
          id: 'SyncAccountSelection.Row.Privatbank_1234'
      timeout: 5000

- tapOn:
      id: 'SyncAccountSelection.Row.Privatbank_1234'

- extendedWaitUntil:
      visible: 'Deselect all'
      timeout: 3000

- waitForAnimationToEnd

- takeScreenshot: scene
